<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="?colorOnPrimary"
        app:menu="@menu/toolbar_menu"
    />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/request_hint"
        app:layout_constraintTop_toBottomOf="@id/top_toolbar"
    >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <ListView
        android:id="@+id/card_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:divider="?android:attr/colorBackground"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/list_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/voice_input_button"
        android:src="@drawable/baseline_keyboard_voice_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/top_toolbar"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--        xmlns:_android="http://"-->
    <!--        android:visibility="gone"-->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/card_list"
        app:layout_constraintEnd_toEndOf="@+id/card_list"
        app:layout_constraintStart_toStartOf="@+id/card_list"
        app:layout_constraintTop_toBottomOf="@+id/top_toolbar">

    </ProgressBar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>