<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_stop"
        android:icon="@drawable/baseline_stop_circle_24"
        android:title="@string/action_stop_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/baseline_clear_all_24"
        android:title="@string/action_clear_title"
        app:showAsAction="ifRoom" />
</menu>