<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.MaterialComponents.DayNight"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="10dp"
    >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/card_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="CARD_TITLE_PLACEHOLDER"
            />
        <TextView
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/card_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textColor="@color/neo_300"
            android:layout_margin="5dp"
            tools:text="CARD_CONTENT_PLACEHOLDER"
            />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>